--- a/VCArd Crichton Monica/CSS/VCard Crichton.css
+++ b/VCArd Crichton Monica/CSS/VCard Crichton.css
@@ -8,7 +8,7 @@ body {
     width: 600px;
     background-color: #fff;
     padding: 20px;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
 }
 h1 {
@@ -19,11 +19,16 @@ h1 {
 img {
     float: left;
     margin-right: 20px;
-    border-radius: 50%;
-    width: 350px;
-    height: 450px;
+    /* border-radius: 50%; */
+    width: 150px;
+    height: 250px;
 }
-h4 {
+
+card-body {
+    width: 100%
+}
+
+/* h4 {
     font-size: 16px;
     color: #333;
     margin-top: 0px;
@@ -33,4 +38,4 @@ h4 {
     font-size: 14px;
     color: #333;
     margin-top: 0px;
-  }
+  } */
